# localsend

./: .fvmrc  .gitignore  .gitmodules  .metadata  .pr-bot-analysis.md  AppImageBuilder.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Podfile  README.md  README_ES.md  README_IT.md  README_JA.md  README_PH.md  README_PL.md  README_RU.md  README_TH.md  README_ZH.md  SECURITY.md  analysis_options.yaml  build.yaml  calculator.py  protocol v2.1 specifications.md  pubspec.yaml  renovate.json  rust-toolchain.toml
.fvm/: fvm_config.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report.yml  config.yml  feature_request.yaml  feature_request.yml
.github/patches/: flutter_3.24.4_dropdown_menu_enableFilter.diff
.github/workflows/: apk_test.yml  arm_test.yml  ci.yml  clear_workflows.yml  compile_apk.yml  compile_arm64_appimage.yml  linux_build.yml  main.yml  release.yml  test2_zip.yml  test3_zip.yml  test_arm64_deb.yml  test_arm64_tar.yml  test_rpm.yml  test_zip.yml  winget.yml
.trunk/: trunk.yaml
android/: build.gradle
android/app/: build.gradle
app/: .gitignore  analysis_options.yaml  build.yaml  distribute_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml  rust-toolchain.toml
app/android/: build.gradle  gradle.properties  settings.gradle
app/assets/: CHANGELOG.md
app/ios/: MyLocalSendStoreKit.storekit  Podfile
app/lib/: init.dart  main.dart  refena.dart  riverpie.dart  theme.dart
app/linux/: CMakeLists.txt  my_application.cc
app/macos/: Podfile
app/rust/: Cargo.toml
app/rust/src/: frb_generated.rs  lib.rs
app/rust/src/api/: crypto.rs  http.rs  logging.rs  mod.rs  model.rs  network.rs  server.rs  stream.rs  webrtc.rs
app/rust/src/util/: bytes.rs  mod.rs
app/rust_builder/: pubspec.yaml
app/test/: mocks.dart  mocks.mocks.dart
app/windows/: .gitignore  CMakeLists.txt  install_msix_helper.ps1  localsend_app.exe.manifest
assets/: CHANGELOG.md
assets/i18n/: _missing_translations.json  _missing_translations_ar.json  _missing_translations_bn.json  _missing_translations_ca.json  _missing_translations_cs.json  _missing_translations_de.json  _missing_translations_es_ES.json  _missing_translations_fa.json  _missing_translations_fr_FR.json  _missing_translations_hu.json  _missing_translations_in.json  _missing_translations_it.json  _missing_translations_iw.json  _missing_translations_ja.json  _missing_translations_km.json  _missing_translations_ko.json  _missing_translations_ne.json  _missing_translations_nl.json  _missing_translations_pl.json  _missing_translations_pt_BR.json  _missing_translations_ru.json  _missing_translations_sv.json  _missing_translations_tr.json  _missing_translations_ua.json  _missing_translations_uk.json  _missing_translations_ur.json  _missing_translations_zh_CN.json  _missing_translations_zh_HK.json  (+38 more)
cli/: Cargo.toml  README.md  pubspec.yaml
cli/lib/: main.dart
cli/lib/server/: multicast_provider.dart  security_service.dart  server_provider.dart  server_utils.dart
cli/lib/server/controller/: api_route_builder.dart  dio_provider.dart  file_path_helper.dart  file_saver.dart  receive_controller.dart  send_controller.dart
cli/lib/server/model/: cross_file.dart  cross_file.mapper.dart  log_entry.dart  log_entry.mapper.dart  receive_session_state.dart  receive_session_state.mapper.dart  receiving_file.mapper.dart  send_mode.dart  send_session_state.dart  send_session_state.mapper.dart  sending_file.dart  sending_file.mapper.dart  server_state.dart  server_state.mapper.dart  web_send_file.dart  web_send_file.mapper.dart  web_send_session.mapper.dart  web_send_state.dart  web_send_state.mapper.dart
cli/src/: config.rs  identity.rs  main.rs  mcp.rs  model.rs  network.rs  store.rs
common/: README.md  analysis_options.yaml  pubspec.yaml
core/: Cargo.toml
core/assets/web/: error-403.html  index.html
core/src/: lib.rs  main.rs  test.rs
core/src/clipboard/: mod.rs
core/src/crypto/: cert.rs  ed25519.rs  hash.rs  key.rs  mod.rs  nonce.rs  signature.rs  token.rs
core/src/http/: client.rs  dto.rs  dto_v2.rs  mod.rs  server.rs  state.rs
core/src/http/client/: mod.rs  url.rs  v2.rs  v3.rs
core/src/http/server/: client_cert_verifier.rs  collect_to_json.rs  error.rs  event.rs  mod.rs  query.rs  response.rs  v3.rs  web.rs
core/src/http/server/common/: query.rs  save.rs  session.rs
core/src/http/server/controller/: mod.rs  v2.rs  v3.rs  web.rs
core/src/model/: discovery.rs  file.rs  mod.rs  transfer.rs
core/src/quic/: client.rs  mod.rs
core/src/util/: base64.rs  mod.rs
core/src/webrtc/: mod.rs  signaling.rs  webrtc.rs
core/tests/: v2_server.rs  v2_web_send.rs
lib/: constants.dart  init.dart  main.dart  riverpie.dart  routes.dart  theme.dart
linux/: CMakeLists.txt  my_application.cc
macos/: Podfile
msix/: AppxManifest.xml  resources.pri  resources.scale-125.pri  resources.scale-400.pri
readme_i18n/: README_AR.md  README_BN.md  README_CS.md  README_DE.md  README_ES.md  README_FA.md  README_FR.md  README_ID.md  README_IT.md  README_JA.md  README_KM.md  README_KO.md  README_MS.md  README_PH.md  README_PL.md  README_PT_BR.md  README_RU.md  README_TH.md  README_TR.md  README_UK.md  README_VI.md  README_ZH.md  README_pt_PT.md
scripts/: compile_android_apk.sh  compile_android_appbundle.ps1  compile_ios.sh  compile_linux_appimage.sh  compile_mac.sh  compile_mac_appstore.sh  compile_mac_dmg.sh  compile_windows_exe-inno.iss  compile_windows_exe.ps1  compile_windows_msix.ps1  compile_windows_msix_helper.ps1  compile_windows_msix_signed.ps1  compile_windows_msix_store.ps1  compile_windows_zip.ps1  contributions_digester.dart  download_windows_msix.ps1  remove_proprietary_dependencies.sh  verify_exe_signature.ps1
server/: Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
server/src/: main.rs
server/src/config/: error.rs  init.rs  mod.rs  scheduler.rs  state.rs
server/src/controller/: mod.rs  rest_controller.rs  ws_controller.rs
server/src/util/: base64.rs  ip.rs  mod.rs
web/: index.html  manifest.json
(+1092 files in other folders)
