[package]
name = "localsend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
bytes = "1.9.0"
flate2 = { version = "1.0.35", optional = true }
futures-util = { version = "0.3.31", features = ["sink"] }
http-body-util = { version = "0.1.2", optional = true }
hyper = { version = "1.6.0", optional = true }
hyper-util = { version = "0.1.10", features = ["server"], optional = true }
pem = { version = "3.0.4", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls-webpki-roots-no-provider", "stream"], optional = true }
rustls = { version = "0.23.21", default-features = false, features = ["ring", "tls12", "std"], optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = { version = "0.26.1", default-features = false, features = ["ring", "tls12"], optional = true }
tokio-stream = "0.1.7"
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"], optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
tungstenite = "0.26.1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
webrtc = { version = "0.12.0", optional = true }
x509-parser = { version = "0.17.0", features = ["verify"], optional = true }

[features]
default = []
http = ["http-body-util", "hyper", "hyper-util", "pem", "reqwest", "rustls", "tokio-rustls", "x509-parser"]
webrtc-signaling = ["tokio-tungstenite"]
webrtc = ["flate2", "dep:webrtc", "webrtc-signaling", "x509-parser"]
full = ["http", "webrtc"]
